@@ -5,6 +5,7 @@
 # a bunch of cleaning up ... make certain everything will be regenerated
 rm -f Makefile Makefile.in aclocal.m4 
 rm -rf autom4te.cache
+rm -f m4/*
 rm -f config.* configure depcomp
 rm -f install-sh intltool-* libtool ltmain.sh missing mkinstalldirs
 rm -f stamp-* vipsCC-7.19.pc vips-7.19.spec vips-7.19.pc
@@ -13,6 +14,18 @@ rm -f swig/vipsCC/VImage.h
 rm -f swig/vipsCC/VImage.py python/vipsCC/VError.py python/vipsCC/VMask.py python/vipsCC/Display.py
 rm -f benchmark/temp*
 ( cd doc ; mkdir poop ; mv reference/libvips-docs.sgml.in poop ; mv reference/Makefile.am poop ; mv reference/images poop ; rm -rf reference/* ; mv poop/* reference ; rmdir poop )
+
+# glib-gettextize asks us to copy these files to m4 if they aren't there
+# I don't have $ACDIR/isc-posix.m4, how mysterious
+ACDIR=`aclocal --print-ac-dir`
+mkdir m4
+cp $ACDIR/codeset.m4 m4
+cp $ACDIR/gettext.m4 m4
+cp $ACDIR/glibc21.m4 m4
+cp $ACDIR/iconv.m4 m4
+cp $ACDIR/isc-posix.m4 m4
+cp $ACDIR/lcmessage.m4 m4
+cp $ACDIR/progtest.m4 m4
 
 gtkdocize --copy --docdir doc/reference --flavour no-tmpl || exit 1
 
